# When-All-Options-Are-Wrong

./: README.md  answer_mapping.py  evaluator.py  mapper_selector.py  math_dataset_generation.py  model_selector.py  models.py  pyproject.toml  qa_dataset.py  supported_models.py  think.py  type_of_prompts.py
qa_datasets/bad/: easy_dataset.json  hard_dataset.json  irrational_medium_dataset.json  medium_dataset.json
qa_datasets/mmlu/: mmlu_sampled.json
