[tool.poetry]
name = "when-all-options-are-wrong"
version = "0.1.0"
description = ""
authors = ["gracjan <gracjan.goral.b@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
anthropic = "^0.34.0"
loguru = "^0.7.2"
replicate = "^0.31.0"
requests = "^2.32.3"
openai = "^1.40.6"
google-generativeai = "^0.7.2"
black = "^24.8.0"
isort = "^5.13.2"
pandas = "^2.2.2"
torch = {extras = ["cpu"], version = "^2.4.0"}
datasets = "^2.21.0"
tabulate = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
